# grundys-game

./: .env  Dockerfile  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  setup.cfg
.github/workflows/: main.yml
docs/: decision_rules.md  game_rules.md
src/: game.py  main.py  minimax.py  minimaxab.py  runner.py  twoparts.py
src/decision_rules/: minimax.py  minimax_alpha_beta_prunning.py
src/game_rules/: game_rules.py  helpers.py
