[metadata]
name = grundys-game-yosra270
version = 0.0.1
author = Yosra DRIDI
author_email = yosra.dridi@insat.ucar.tn
description = An implementation of grundy s game using game theory (minimax with alpha-beta prunning).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yosra270/grundys-game
license = MIT
platform = any
keywords = artificial-intelligence game-theory
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src